[project]
name = "sentinel-agent"
version = "0.1.0"
description = "Lightweight production monitoring agent with Signal and email alerting"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9,<4",
    "pyyaml>=6.0,<7",
    "anthropic>=0.40,<1",
    "aiosmtplib>=3.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aioresponses>=0.7",
    "pytest-cov>=5.0",
]

[project.scripts]
sentinel = "sentinel.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
